# django-benkyou

./: .env.template  .gitignore  README.md  django-benkyou.code-workspace  pyproject.toml
benkyo/: .env  inspact_db_models.py  manage.py
benkyo/benkyo/: api.py  asgi.py  settings.py  urls.py  wsgi.py
benkyo/common/: __init__.py  base.py  common_schema.py  db_instance.py  db_manage.py  response_util.py
benkyo/customer/: api.py  model.py  schema.py  services.py
benkyo/user/: api.py  app.py  schema.py
